--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "preview": "nuxt preview"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.1.3",
     "@nuxt/content": "^2.12.1",
     "nuxt": "^3.11.2"
   },
-  "packageManager": "yarn@1.22.21+sha1.1959a18351b811cdeedbd484a8f86c3cc3bbaf72"
+  "packageManager": "yarn@1.22.21+sha1.1959a18351b811cdeedbd484a8f86c3cc3bbaf72",
+  "devDependencies": {
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3"
+  }
 }
