--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@heroicons/vue": "^2.1.3",
     "@nuxt/content": "^2.12.1",
+    "@nuxt/image": "^1.7.0",
     "nuxt": "^3.11.2"
   },
   "packageManager": "yarn@1.22.21+sha1.1959a18351b811cdeedbd484a8f86c3cc3bbaf72",
